# health-app

./: .gitignore  README.md  pyproject.toml
health_project/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  models.py  signals.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
weights/: models.py  urls.py  views.py
weights/migrations/: 0001_initial.py  0002_auto_20210305_0045.py
weights/static/weights/: styles.css
weights/templates/partials/: _footer.html  _navbar.html
weights/templates/weights/: about.html  base.html  home.html  post_confirm_delete.html  post_detail.html  post_form.html  user_post.html
